cargo-features = ["edition2024"]
[package]
name = "escrow"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-program = "2.3.0"
spl-token = {version ="8.0.0",features = ["no-entrypoint"]}
thiserror = "2.0.12"
arrayref = "0.3.7"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]
